# src/swagger/swagger-output.json
@@ -210,6 +210,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -224,6 +227,12 @@
                 "type": "object",
                 "properties": {
                   "user_name": {
+                    "example": "any"
+                  },
+                  "board_content": {
+                    "example": "any"
+                  },
+                  "images": {
                     "example": "any"
                   }
                 }
@@ -327,10 +336,18 @@
         }
       }
     },
-    "/api/board/reply": {
+    "/api/board/{board_id}/report": {
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "board_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -359,10 +376,61 @@
                   "user_name": {
                     "example": "any"
                   },
+                  "report_content": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/board/reply": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "419": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "user_name": {
+                    "example": "any"
+                  },
                   "board_id": {
                     "example": "any"
                   },
                   "reply_content": {
+                    "example": "any"
+                  },
+                  "board_content": {
+                    "example": "any"
+                  },
+                  "images": {
                     "example": "any"
                   }
                 }
@@ -457,6 +525,56 @@
                 "type": "object",
                 "properties": {
                   "user_name": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/board/reply/{reply_id}/report": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "reply_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "419": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "user_name": {
+                    "example": "any"
+                  },
+                  "report_content": {
                     "example": "any"
                   }
                 }
